--- a/config.toml
+++ b/config.toml
@@ -10,6 +10,7 @@ theme = "sumo-theme"
 favicon = "images/favicon.ico"
 logo = "images/logos/sumo-logo-white.svg"
 docsURL = "https://sumo.dlr.de/docs"
+githubEditURL = "https://github.com/eclipse/sumo.website/edit/master/content/"
 Version = "1.7.0"
 
 ## Enable inline-HTML in Hugo > v0.60.0
