--- a/config.toml
+++ b/config.toml
@@ -29,7 +29,7 @@ weight = 1
 
 [[menu.main]]
 URL = "https://sumo.dlr.de/download"
-name = "Download"
+name = "Downloads"
 weight = 2
 
 [[menu.main]]
