--- a/config/_default/menu.yaml
+++ b/config/_default/menu.yaml
@@ -3,10 +3,10 @@ main:
       url: ""
       weight: 1
     - name: "Downloads"
-      url: "https://sumo.sourceforge.net/docs/Downloads.php"
+      url: "https://sumo.dlr.de/docs/Downloads.php"
       weight: 2
     - name: "Documentation"
-      url: "https://sumo.sourceforge.net/docs/"
+      url: "https://sumo.dlr.de/docs/"
       weight: 3
     - name: "Conference"
       url: "conference"
@@ -31,31 +31,31 @@ main:
       weight: 2
     - name: "ChangeLog"
       parent: "About"
-      url: "https://sumo.sourceforge.net/docs/ChangeLog.html"
+      url: "https://sumo.dlr.de/docs/ChangeLog.html"
       weight: 3
     - name: "Status of daily build and tests"
       parent: "About"
-      url: "https://sumo.sourceforge.net/daily"
+      url: "https://sumo.dlr.de/daily"
       weight: 4
     - name: "Projects"
       parent: "References"
-      url: "https://sumo.sourceforge.net/docs/Other/Projects.html"
+      url: "https://sumo.dlr.de/docs/Other/Projects.html"
       weight: 1
     - name: "Publications"
       parent: "References"
-      url: "https://sumo.sourceforge.net/docs/Publications.html"
+      url: "https://sumo.dlr.de/docs/Publications.html"
       weight: 2
     - name: "Contributed extensions"
       parent: "References"
-      url: "https://sumo.sourceforge.net/docs/Contributed/index.html"
+      url: "https://sumo.dlr.de/docs/Contributed/index.html"
       weight: 3
     - name: "FAQ"
       parent: "Support"
-      url: "https://sumo.sourceforge.net/docs/FAQ.html"
+      url: "https://sumo.dlr.de/docs/FAQ.html"
       weight: 1
     - name: "Tutorials"
       parent: "Support"
-      url: "https://sumo.sourceforge.net/docs/Tutorials/index.html"
+      url: "https://sumo.dlr.de/docs/Tutorials/index.html"
       weight: 2
     - name: "Report a Bug / Issue"
       parent: "Support"
@@ -63,13 +63,13 @@ main:
       weight: 3
     - name: "Pydoc Documentation"
       parent: "Support"
-      url: "https://sumo.sourceforge.net/pydoc/"
+      url: "https://sumo.dlr.de/pydoc/"
       weight: 4
     - name: "Doxygen Documentation"
       parent: "Support"
-      url: "https://sumo.sourceforge.net/daily/doxygen/"
+      url: "https://sumo.dlr.de/daily/doxygen/"
       weight: 5
     - name: "Developer Documentation"
       parent: "Support"
-      url: "https://sumo.sourceforge.net/docs/Developer/index.html"
+      url: "https://sumo.dlr.de/docs/Developer/index.html"
       weight: 6
