--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -5,7 +5,7 @@ languageCode: "en-us"
 title: "Eclipse SUMO - Simulation of Urban MObility"
 disableKinds: ["taxonomyTerm"]
 theme: "sumo-theme"
-enableGitInfo: true
+#enableGitInfo: true
 
 ########################### Default Parameters #############################
 
