new repository url

--- a/src/config/_default/menu.yaml
+++ b/src/config/_default/menu.yaml
@@ -59,7 +59,7 @@ main:
       weight: 2
     - name: "Report a Bug / Issue"
       parent: "Support"
-      url: "https://github.com/eclipse/sumo/issues"
+      url: "https://github.com/eclipse-sumo/sumo/issues"
       weight: 3
     - name: "Pydoc Documentation"
       parent: "Support"
