--- a/src/config/_default/config.yaml
+++ b/src/config/_default/config.yaml
@@ -13,7 +13,7 @@ params:
   favicon: "images/favicon.ico"
   logo: "images/logos/sumo-logo-white.svg"
   docsURL: "https://sumo.dlr.de/docs"
-  githubEditURL: "https://github.com/eclipse/sumo.website/edit/main/content/"
+  githubEditURL: "https://github.com/eclipse-sumo/sumo.website/edit/main/content/"
   Version: "1.18.0"
 
 markup:
