--- a/lychee.toml
+++ b/lychee.toml
@@ -8,7 +8,7 @@ insecure = true
 #remap = ['%7B%7BVersion%7D%7D 1.19.0']
 
 # Exclude URLs and mail addresses from checking (supports regex).
-exclude = ['dlr\.de', 'linkedin\.com', 'twitter\.com']
+exclude = ['linkedin\.com', 'twitter\.com']
 
 
 
