--- a/lychee.toml
+++ b/lychee.toml
@@ -8,7 +8,4 @@ insecure = true
 #remap = ['%7B%7BVersion%7D%7D 1.19.0']
 
 # Exclude URLs and mail addresses from checking (supports regex).
-exclude = ['linkedin\.com', 'twitter\.com']
-
-
-
+exclude = ['instagram\.com', 'linkedin\.com', 'twitter\.com']
