--- a/src/config/_default/menu.yaml
+++ b/src/config/_default/menu.yaml
@@ -9,7 +9,7 @@ main:
       url: "https://sumo.dlr.de/docs/Downloads.php"
       weight: 3
     - name: "Conference"
-      url: "conference"
+      url: ""
       weight: 4
     - name: "References"
       url: ""
@@ -37,6 +37,14 @@ main:
       parent: "About"
       url: "https://sumo.dlr.de/daily"
       weight: 4
+    - name: "Proceedings and Editorial Team"
+      parent: "Conference"
+      url: "proceedings"
+      weight: 1
+    - name: "SUMO User Conference 2024"
+      parent: "Conference"
+      url: "conference"
+      weight: 2
     - name: "Projects"
       parent: "References"
       url: "https://sumo.dlr.de/docs/Other/Projects.html"
