--- a/.github/workflows/linkcheck.yml
+++ b/.github/workflows/linkcheck.yml
@@ -2,6 +2,7 @@ name: linkcheck
 
 on:
   workflow_dispatch:
+  push:
   schedule:
   - cron: '30 1 * * *' # daily at 01:30 UTC
 
@@ -12,8 +13,6 @@ jobs:
     steps:
     - name: Cloning repository
       uses: actions/checkout@v4
-      with:
-        ref: main
 
     - name: Lychee Link Checker
       uses: lycheeverse/lychee-action@v1
