--- a/.github/workflows/linkcheck.yml
+++ b/.github/workflows/linkcheck.yml
@@ -3,6 +3,8 @@ name: linkcheck
 on:
   workflow_dispatch:
   push:
+    branches:
+    - main
   schedule:
   - cron: '30 1 * * *' # daily at 01:30 UTC
 
