--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,6 +1,6 @@
 ############################ Default configuration #########################
 
-baseURL: "https://www.eclipse.dev/sumo"
+baseURL: "https://eclipse.dev/sumo"
 languageCode: "en-us"
 title: "Eclipse SUMO - Simulation of Urban MObility"
 disableKinds: ["taxonomyTerm"]
