--- a/.github/workflows/trigger_deploy.yml
+++ b/.github/workflows/trigger_deploy.yml
@@ -6,3 +6,6 @@ on:
 jobs:
   call-workflow:
     uses: eclipse-sumo/sumo.website/.github/workflows/deploy.yml@source
+    permissions:
+      contents: write
+      actions: write
