--- a/config/_default/menu.yaml
+++ b/config/_default/menu.yaml
@@ -3,7 +3,7 @@ main:
       url: ""
       weight: 1
     - name: "Documentation"
-      url: "https://sumo.sourceforge.net/docs/"
+      url: "https://sumo.dlr.de/docs/"
       weight: 2
     - name: "Downloads"
       url: "https://sumo.dlr.de/docs/Downloads.php"
