--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,8 +15,7 @@ jobs:
     - name: Checkout source Branch
       uses: actions/checkout@v4
       with:
-        fetch-depth: 0
-        submodules: true
+        ref: 'source'
 
     - name: Install Hugo
       uses: peaceiris/actions-hugo@v2
@@ -45,6 +44,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
         mkdocs build --strict -d ../userdoc
+        mv ../userdoc/Downloads.html ../userdoc/Downloads.php
         ../../tools/build_config/buildPyDoc.py ../pydoc
 
     - name: Get Commit Message
