--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,12 +37,15 @@ jobs:
         repository: eclipse-sumo/sumo
         path: sumo
 
-    - name: Install dependencies and run mkdocs
+    - name: Installing mkdocs dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y plantuml
         python -m pip install --upgrade pip
-        python -m pip install -r requirements.txt
+        python -m pip install -r sumo/docs/web/requirements.txt
+
+    - name: Running mkdocs and pydoc
+      run: |
         cd sumo/docs/web
         mkdocs build --strict -d ../userdoc
         mv ../userdoc/Downloads.html ../userdoc/Downloads.php
