--- a/config/dlr/config.yaml
+++ b/config/dlr/config.yaml
@@ -1,3 +1,3 @@
-############################ Default configuration #########################
+####################### All URLs pointing to sumo.dlr.de ####################
 
 baseURL: "https://sumo.dlr.de/hugo"
